--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "@mui/material": "^6.1.0",
     "d3": "^7.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-geolocated": "^4.2.0",
-    "react-webcam": "^7.2.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
