--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build && echo labs.antknt47.com > dist/CNAME",
+    "deploy": "gh-pages -d dist -r https://github.com/Antknt47/ant-nav"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "plop": "^4.0.1",
     "vite": "^5.4.1"
